--- a/Orders/Orders.Web/appsettings.json
+++ b/Orders/Orders.Web/appsettings.json
@@ -1,3 +1,6 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=.;Initial Catalog=OrdersDb;Integrated Security=SSPI;"
+  }
 }
